finally able to make api calls to the server, will work on client now

--- a/CooldownsServer/appsettings.json
+++ b/CooldownsServer/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ChampionDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "CooldownServer",
+    "CollectionName": "Champion"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
